-
Bug
-
Resolution: Done
-
P2: Important
-
5.14, 5.15
-
None
-
openSUSE 15.x
-
226fef3dc00874d3c69ac62364518411a95ef4da (qt/qtwebengine/5.14)
agent:2020/02/04 12:48:44 build.go:220: FAIL! : qmltests::WebEngineViewSource::test_viewSource() Compared values are not the same agent:2020/02/04 12:48:44 build.go:220: Actual (): Qt.url(file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/test1.html) agent:2020/02/04 12:48:44 build.go:220: Expected (): view-source:file:///home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/test1.html agent:2020/02/04 12:48:44 build.go:220: Loc: [/home/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_viewSource.qml(94)]
- is duplicated by
-
QTBUG-82829 Q12020 Flaky failing autotest function WebEngineViewSource::test_viewSource in qmltests
-
- Closed
-
For Gerrit Dashboard: QTBUG-81855 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
290172,2 | Emit title change event asynchronously | 5.14 | qt/qtwebengine | Status: MERGED | +2 | 0 |